--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/main">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"/>
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="FOOD FAST"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textColor="@color/green"
+        android:textStyle="bold"
+        android:textSize="50dp"
+        android:textAlignment="center"
+        android:layout_marginTop="100dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/helpButton"
+        android:layout_width="114dp"
+        android:layout_height="166dp"
+        android:layout_marginTop="450dp"
+        android:background="null"
+        android:drawableTop="@drawable/help_foreground"
+        android:src="@drawable/help_foreground"
+        android:text="HELP"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/showButton"
+        android:layout_width="180dp"
+        android:background="null"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="450dp"
+        android:drawableTop="@drawable/show_foreground"
+        android:src="@drawable/show_foreground"
+        android:text="SHOW NEAREST RESTAURANT" />
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="167dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="450dp"
+        android:background="null"
+        android:drawableTop="@drawable/search_foreground"
+        android:gravity="center"
+        android:text="SEARCH"
+        android:textColor="@color/black" />
+
+</RelativeLayout>
