--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,6 +14,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:backgroundTint="#FFFFFF"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/food"/>
 
 </RelativeLayout>
