--- a/app/src/main/res/layout/activity_lihat_restauran.xml
+++ b/app/src/main/res/layout/activity_lihat_restauran.xml
@@ -108,6 +108,7 @@
         android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textViewliat2"
+        android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:text="ID \t\t\t\t\t:" />
 
