--- a/app/src/main/res/layout/activity_buat_data.xml
+++ b/app/src/main/res/layout/activity_buat_data.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".update_data">
-
+    android:padding="16dp"
+    tools:context=".Buat_data">
     <EditText
-        android:id="@+id/editTextup1"
+        android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1" >
+        <requestFocus />
     </EditText>
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="ID Restaurant" />
 
@@ -24,13 +26,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editTextup1"
-        android:layout_below="@+id/editTextup1"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_below="@+id/editText1"
         android:layout_marginTop="10dp"
-        android:text="Nama" />
+        android:text="Nama Restauran" />
 
     <EditText
-        android:id="@+id/editTextup2"
+        android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
@@ -40,51 +42,55 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editTextup2"
-        android:layout_below="@+id/editTextup2"
+        android:layout_below="@+id/editText2"
+        android:layout_alignLeft="@+id/editText2"
         android:layout_marginTop="10dp"
         android:text="Alamat" />
 
     <EditText
-        android:id="@+id/editTextup3"
+        android:id="@+id/editText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3" />
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editTextup3"
-        android:layout_below="@+id/editTextup3"
+        android:layout_below="@+id/editText3"
+        android:layout_alignLeft="@+id/editText3"
         android:layout_marginTop="10dp"
-        android:text="Rating" />
+        android:text="Rating 1-10" />
 
     <EditText
-        android:id="@+id/editTextup4"
+        android:id="@+id/editText4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView4"
         android:layout_below="@+id/textView4" />
 
 
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextup4"
-        android:layout_marginLeft="100dp"
-        android:backgroundTint="#0EBD08"
-        android:textColor="@color/white"
-        android:text="Update" />
+        android:layout_below="@id/editText4"
+        android:background="#006400"
+        android:textColor="#ffffff"
+        android:gravity="center"
+        android:text="Simpan" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#BC0520"
-        android:layout_alignBaseline="@id/button1"
+        android:layout_alignBaseline="@+id/button1"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_toRightOf="@+id/textView4"
+        android:background="#FF0000"
         android:textColor="@color/white"
+        android:layout_marginLeft="20dp"
         android:text="Back" />
+
 </RelativeLayout>
