SQLite Update terbaru

--- a/app/src/main/res/layout/activity_lihat_restauran.xml
+++ b/app/src/main/res/layout/activity_lihat_restauran.xml
@@ -41,27 +41,6 @@
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textViewliat4"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewliat1"
-        android:layout_below="@+id/textViewliat3"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/TextView03"
-        android:layout_width="wrap_content"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textViewliat4"
-        android:layout_alignBottom="@+id/textViewliat4"
-        android:layout_alignLeft="@+id/TextView04"
-        android:text="Rating\t\t:" />
-
-    <TextView
         android:id="@+id/TextView04"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,7 +48,7 @@
         android:layout_alignBaseline="@+id/textViewliat3"
         android:layout_alignBottom="@+id/textViewliat3"
         android:layout_alignLeft="@+id/TextView02"
-        android:text="Alamat\t\t:" />
+        android:text="Testimoni \t\t:" />
 
     <TextView
         android:id="@+id/TextView02"
@@ -79,7 +58,31 @@
         android:layout_alignBaseline="@+id/textViewliat2"
         android:layout_alignBottom="@+id/textViewliat2"
         android:layout_alignLeft="@+id/TextView01"
-        android:text="Nama\t\t\t:" />
+        android:text="RM\t\t\t\t\t\t\t\t:" />
+
+    <TextView
+        android:id="@+id/TextView05"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/TextView01"
+        android:layout_alignBottom="@+id/textViewliat3"
+        android:layout_marginLeft="3dp"
+        android:layout_marginBottom="-39dp"
+        android:text="Rating\t\t\t\t\t:"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:id="@+id/textViewliat5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TextView04"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="135dp"
+        android:layout_marginRight="241dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/TextView01"
@@ -89,14 +92,14 @@
         android:layout_above="@+id/textViewliat2"
         android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
-        android:text="ID \t\t\t\t\t:" />
+        android:text="Nama \t\t\t\t\t:" />
 
     <Button
         android:id="@+id/button1"
         android:layout_height="35dp"
-        android:layout_alignLeft="@+id/TextView04"
-        android:layout_below="@+id/TextView04"
-        android:layout_marginTop="60dp"
+        android:layout_alignLeft="@+id/TextView01"
+        android:layout_below="@+id/TextView05"
+        android:layout_marginTop="50dp"
         android:layout_width="70dp"
         android:background="#8B0000"
         android:gravity="center"
