--- a/app/src/main/res/layout/activity_buat_data.xml
+++ b/app/src/main/res/layout/activity_buat_data.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="ID Restaurant" />
+        android:text="Nama Pelanggan" />
 
     <TextView
         android:id="@+id/textView2"
@@ -29,7 +29,7 @@
         android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/editText1"
         android:layout_marginTop="10dp"
-        android:text="Nama Restauran" />
+        android:text="Rumah Makan" />
 
     <EditText
         android:id="@+id/editText2"
@@ -45,7 +45,7 @@
         android:layout_below="@+id/editText2"
         android:layout_alignLeft="@+id/editText2"
         android:layout_marginTop="10dp"
-        android:text="Alamat" />
+        android:text="Testimoni" />
 
     <EditText
         android:id="@+id/editText3"
@@ -53,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -66,11 +67,8 @@
         android:id="@+id/editText4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView4" />
-
-
-
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
